components/llmd-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress
  labels:
    istio.io/rev: openshift-gateway
  annotations:
    security.opendatahub.io/authorino-tls-bootstrap: "true"
spec:
  gatewayClassName: data-science-gateway-class

  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: openshift-ai-inference-gateway-config

  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: openshift-ai-inference-service-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              llm-d-gateway-access: "true"
